--- a/test_frontend_light/index.css
+++ b/test_frontend_light/index.css
@@ -2,11 +2,47 @@
 {
 	border: solid;
 	border-radius: 5px;
-	width: 30%;
-	height: auto;
+	padding: 3%;
+	width: 50vh;
+	height: 50vh;
 }
 
 .block:hover
 {
 	border-color: red;
+}
+
+.overlay
+{
+    position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.5);
+	z-index: 1000;
+}
+
+.overlayBlock
+{
+	border: solid;
+	border-radius: 5px;
+	padding: 3%;
+	width: 70vh;
+	height: 70vh;
+	color: blue;
+}
+
+.headerClass
+{
+	top: 0px;
+	left: 0px;
+	margin: 0px;
+	margin-bottom: 3%;
+	height: 10%;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 1);
+	color: rgba(255, 255, 255, 1);
 }
