--- a/code-clash-frontend/src/subclasses/blocks.css
+++ b/code-clash-frontend/src/subclasses/blocks.css
@@ -1,11 +1,6 @@
-/*html
-{
-	background: yellow;
-}*/
 .block {
-  display: inline-block;
+  display: inline;
   border: solid;
-  border-radius: 5px;
   padding: 3%;
   width: 50vh;
   height: 50vh;
@@ -30,7 +25,6 @@
   top: 10vh;
   left: calc(50vw - 38vh);
   border: solid;
-  border-radius: 5px;
   padding: 3%;
   width: 70vh;
   height: 70vh;
