--- a/code-clash-frontend/src/subclasses/accounts/accounts.scss
+++ b/code-clash-frontend/src/subclasses/accounts/accounts.scss
@@ -1,8 +1,7 @@
-.block
+.blockA
 {
 	border: solid;
-	border-radius: 5px;
-	border-width: 1.5px;
+	border-width: 1px;
 	padding: 0.5em;
 	margin: 2% 5%;
 	width: 50vw;
@@ -12,8 +11,7 @@
 .blockExpanded
 {
 	border: solid;
-	border-radius: 5px;
-	border-width: 1.5px;
+	border-width: 1px;
 	padding: 0.5em;
 	margin: 2% 5%;
 	width: 50vw;
@@ -22,6 +20,7 @@
 
 .codeBlock
 {
+	font-size: 10pt;
 	padding: 0.5em;
 	width: 90%;
 	height: 80%;
@@ -45,7 +44,6 @@
 {
 	float: right;
 	border: solid;
-	border-radius: 5px;
 	border-width: 1px;
 	padding: 0.5em;
 	margin: 0 5%; /*Vertical, horizontal*/
