--- a/code-clash-frontend/src/subclasses/blocks/blocks.css
+++ b/code-clash-frontend/src/subclasses/blocks/blocks.css
@@ -1,6 +1,7 @@
 .block {
-  display: inline;
+  font-size: 10pt;
   border: solid;
+  margin: 0 auto;
   padding: 3%;
   width: 50vh;
   height: 50vh;
@@ -21,6 +22,7 @@
   z-index: 1000; }
 
 .overlayBlock {
+  font-size: 10pt;
   position: fixed;
   top: 10vh;
   left: calc(50vw - 38vh);
