--- a/code-clash-frontend/src/subclasses/accounts/upload/upload.scss
+++ b/code-clash-frontend/src/subclasses/accounts/upload/upload.scss
@@ -1,11 +1,11 @@
-#codeBlock
+.uploadBlock
 {
+	display: inline-block;
 	border: solid;
-	border-radius: 5px;
 	border-width: 1.5px;
 	padding: 0.5em;
 	margin: 2% 5%;
-	width: 70vw;
+	width: 20vw;
 	height: 50vh;
 	overflow: auto;
 	text-align: left;
