--- a/code-clash-frontend/src/subclasses/accounts/upload/upload.css
+++ b/code-clash-frontend/src/subclasses/accounts/upload/upload.css
@@ -1,10 +1,19 @@
 .uploadBlock {
-  display: inline-block;
   border: solid;
   border-width: 1.5px;
   padding: 0.5em;
-  margin: 2% 5%;
+  margin: 2%;
   width: 20vw;
   height: 50vh;
   overflow: auto;
   text-align: left; }
+
+.fileItem {
+  display: flex;
+  justify-content: space-between;
+  padding: 1px;
+  cursor: pointer; }
+  .fileItem input {
+    border: 0px; }
+    .fileItem input:hover {
+      background-color: silver; }
