Fixed that thing where you have to click once before the blocks page starts working properly + some minor stuff
Includes font change and minor CSS changes

Part 10:
The girl was just outside the cave, scratching a drawing into the dirt.

The old man stepped outside, holding two plates of hill boar thigh. Roasted with a few handfuls of the tiny mushrooms found in the nearby forest, the meat gives off an irresistable aroma.

The girl, as if on cue, jumped up and excitedly ran back inside. The two settled down on the table.

"Papi", the girl suddenly said. "What's my name?"

"Hmm? What'd ya mean?"

"Well my teacher asked for my name today! When I said I didn't have one, he said that everybody's born with a name."

She paused, waiting for an answer.

"I was born with one too, right?" She continued.

"Tha's a good question. I don't-"

"Papi! I wasn't born with a name, was I? Maybe that's why my parents left me! They must've thought I was weird!"

"Calm down, lass. I'm sure tha's not why."

She didn't look convinced.

"Come on, look on the brigh' side. A' leas' that means you can make your own name! You can call yourself anythin' you want!"

Finally, she perked up. "Anything at all?"

"Yes! Absolutely anythin'!"

"Oh! Then I want to be called 'Stars in the Night Sky'! Because they're so pretty!"

He chuckled. "Tha's a little long, ain't it? Why not shorten it to 'Sky'?"

She thought about it.

"Okay!" She chirped happily. "I can't wait to tell my teacher tomorrow!"

--- a/code-clash-frontend/src/App.scss
+++ b/code-clash-frontend/src/App.scss
@@ -1,11 +1,9 @@
-html
-{
-	font-family: 'PT Sans', sans-serif;
-	color: #333333;
-}
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 body
 {
+	font-family: 'Quicksand', sans-serif;
+	color: #333333;
 	margin: 0;
 }
 
