The code block text thing, and css stuff
The header looks kind of cool now. The code looks disgusting though.

Part 11:
Sky lied under the afternoon sun, watching a hawk catch a smaller bird. The old man, next to her, was drawing lines on the ground with a stick.

"Papi, pleaaaase, it's the weekend! Why do I still have to learn?" The girl pleaded.

"It's always time fer learnin'! Especially somethin' as importan' as this," the old man replied, keeping his sight on the diagram he sketched out. "Look at th' ground here for a secon'."

She sat up, and looked over. There were some word bubbles, and some arrows pointing between the bubbles. There were lines that divided the bubbles, and arrows that pointed at lines, and more words, and...

"What is this?" Asked Sky.

"It's what yer gonna be learning for the next few weeks," replied the old man. "When yer having a discussion with someone, it's importan' t' be able t' see the flaws in what they're sayin'."

"Um, why?"

"So ya can call 'em out when someone tries to tell you lies!"

She took a few seconds to process this. "Why would anyone want tell lies? Didn't their own papi teach them better?"

"Not everyone has a good papi like ya do," the old man said seriously. "Sometimes they think tha' tellin' lies will help them out. Or sometimes they jus' dunno better. Sometimes they were lied t' too."

Sky took this all in thoughtfully. She nodded, but her face betrayed that she had no idea what he was talking about.

"You'll ge' it one day. Fer now, jus' learn the stuff. I'll be gone one day and you'll have t' survive on yer own. Then, you'll be grateful ya learned all this."

--- a/code-clash-frontend/src/subclasses/blocks/blocks.css
+++ b/code-clash-frontend/src/subclasses/blocks/blocks.css
@@ -1,14 +1,14 @@
 .block {
   font-size: 10pt;
   border-radius: 5px;
-  margin: 0 auto;
+  outline: 3px dashed black;
+  margin: 0 1%;
   padding: 3%;
   width: 50vh;
   height: 50vh;
   overflow: auto; }
-
-.block:hover {
-  border-color: red; }
+  .block:active {
+    outline: 5px dashed black; }
 
 .overlay {
   position: fixed;
@@ -23,10 +23,10 @@
 
 .overlayBlock {
   font-size: 10pt;
+  border-radius: 5px;
   position: fixed;
   top: 10vh;
   left: calc(50vw - 38vh);
-  border: solid;
   padding: 3%;
   width: 70vh;
   height: 70vh;
