--- a/code-clash-frontend/src/App.css
+++ b/code-clash-frontend/src/App.css
@@ -32,7 +32,12 @@ body {
   text-decoration: none;
   padding: 0 10px;
   /*margin-bottom: 5%;*/ }
-
-.headerClass a:hover {
-  padding-bottom: 1%;
-  border-bottom: solid #71aac7; }
+  .headerClass a:hover {
+    background-color: #2c54cd;
+    padding-bottom: 1%;
+    border-bottom: solid #71aac7;
+    padding-top: 1%;
+    margin-top: -1%;
+    outline-top: solid #71aac7; }
+  .headerClass a:active {
+    background-color: #5a7be0; }
