--- a/code-clash-frontend/src/App.scss
+++ b/code-clash-frontend/src/App.scss
@@ -25,24 +25,36 @@ body
 }
 
 /* The text and content of the header. */
-.headerClass > *
+.headerClass
 {
-	font-size: 15pt;
-	color: rgba(255, 255, 255, 1);
-	display: inline-block;
-	margin: 0 auto;
-}
+	& > *
+	{
+		font-size: 15pt;
+		color: rgba(255, 255, 255, 1);
+		display: inline-block;
+		margin: 0 auto;
+	}
 
-.headerClass a
-{
-	float: right;
-	text-decoration: none;
-	padding: 0 10px;
-	/*margin-bottom: 5%;*/
-}
-
-.headerClass a:hover
-{
-	padding-bottom: 1%;
-	border-bottom: solid #71aac7;
+	a
+	{
+		float: right;
+		text-decoration: none;
+		padding: 0 10px;
+		/*margin-bottom: 5%;*/
+		
+		&:hover
+		{
+			background-color: #2c54cd;
+			padding-bottom: 1%;
+			border-bottom: solid #71aac7;
+			padding-top: 1%;
+			margin-top: -1%;
+			outline-top: solid #71aac7;
+		}
+		
+		&:active
+		{
+			background-color: #5a7be0;
+		}
+	}
 }
