--- a/code-clash-frontend/src/css/App.css
+++ b/code-clash-frontend/src/css/App.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Quicksand");
 body {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   color: #333333;
-  margin: 0; }
+  margin: 0;
+  background-color: #fcfdff;
+}
 
 /* Just the "background" of the header. */
 .headerWrapper > .headerClass {
@@ -15,29 +17,35 @@ body {
   width: 98%;
   /*98% to account for the 1% left and right paddings.*/
   /* With the help of Photoshop, I've picked out a few nice colours:
-  	   - 002aa8 (Dark blue)
-	   - 71aac7 (light blue)
-	 */
-  background-color: #002AA8; }
+   	   - 002aa8 (Dark blue)
+     - 71aac7 (light blue)
+   */
+  background-color: #002AA8;
+}
 
 /* The text and content of the header. */
 .headerClass > * {
   font-size: 15pt;
   color: white;
   display: inline-block;
-  margin: 0 auto; }
-
+  margin: 0 auto;
+}
 .headerClass a {
   float: right;
   text-decoration: none;
   padding: 0 10px;
-  /*margin-bottom: 5%;*/ }
-  .headerClass a:hover {
-    background-color: #2c54cd;
-    padding-bottom: 1%;
-    border-bottom: solid #71aac7;
-    padding-top: 1%;
-    margin-top: -1%;
-    outline-top: solid #71aac7; }
-  .headerClass a:active {
-    background-color: #5a7be0; }
+  /*margin-bottom: 5%;*/
+}
+.headerClass a:hover {
+  background-color: #2c54cd;
+  padding-bottom: 1%;
+  border-bottom: solid #71aac7;
+  padding-top: 1%;
+  margin-top: -1%;
+  outline-top: solid #71aac7;
+}
+.headerClass a:active {
+  background-color: #5a7be0;
+}
+
+/*# sourceMappingURL=App.css.map */
