--- a/code-clash-frontend/src/scss/App.scss
+++ b/code-clash-frontend/src/scss/App.scss
@@ -5,6 +5,8 @@ body
 	font-family: 'Quicksand', sans-serif;
 	color: #333333;
 	margin: 0;
+	
+	background-color: #fcfdff;
 }
 
 /* Just the "background" of the header. */
@@ -22,39 +24,39 @@ body
 	   - 71aac7 (light blue)
 	 */
 	background-color: #002AA8;
-}
-
-/* The text and content of the header. */
-.headerClass
-{
-	& > *
+	
+	/* The text and content of the header. */
+	& > .headerClass
 	{
-		font-size: 15pt;
-		color: rgba(255, 255, 255, 1);
-		display: inline-block;
-		margin: 0 auto;
-	}
-
-	a
-	{
-		float: right;
-		text-decoration: none;
-		padding: 0 10px;
-		/*margin-bottom: 5%;*/
-		
-		&:hover
+		& > *
 		{
-			background-color: #2c54cd;
-			padding-bottom: 1%;
-			border-bottom: solid #71aac7;
-			padding-top: 1%;
-			margin-top: -1%;
-			outline-top: solid #71aac7;
+			font-size: 15pt;
+			color: rgba(255, 255, 255, 1);
+			display: inline-block;
+			margin: 0 auto;
 		}
-		
-		&:active
+
+		a
 		{
-			background-color: #5a7be0;
+			float: right;
+			text-decoration: none;
+			padding: 0 10px;
+			/*margin-bottom: 5%;*/
+			
+			&:hover
+			{
+				background-color: #2c54cd;
+				padding-bottom: 1%;
+				border-bottom: solid #71aac7;
+				padding-top: 1%;
+				margin-top: -1%;
+				outline-top: solid #71aac7;
+			}
+			
+			&:active
+			{
+				background-color: #5a7be0;
+			}
 		}
 	}
 }
