--- a/code-clash-backend/blocks/templates/blocks/index.html
+++ b/code-clash-backend/blocks/templates/blocks/index.html
@@ -1,8 +1,5 @@
 {% if choices %}
 	{{ choices.0.code }} {{ choices.1.code }}
 	<br>
-	<form action="{% url 'vote' choices %}" method="post">
-		{% csrf_token %}
-		<button type="submit" value="l"> &lt; </button><button type="submit" value="r"> &gt; </button>
-	</form>
+	<button> &lt; </button><button> &gt; </button>
 {% endif %}
