--- a/code-clash-frontend/src/App.scss
+++ b/code-clash-frontend/src/App.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
+*
+{
+	box-sizing: border-box;
+}
+
 body
 {
 	font-family: 'Quicksand', sans-serif;
@@ -15,13 +20,10 @@ body
 /* Just the "background" of the header. */
 .headerWrapper > .headerClass
 {
-	/*The margin options are for the blocks page.*/
-	top: 0;
-	left: 0;
-	margin: 0;
-	margin-bottom: 2%;
-	padding: 1% 1%;
-	width: 98%; /*98% to account for the 1% left and right paddings.*/
+	margin: 0 0 1em;
+	padding: 1em;
+
+	width: 100%;
 	/* With the help of Photoshop, I've picked out a few nice colours:
   	   - 002aa8 (Dark blue)
 	   - 71aac7 (light blue)
