--- a/code-clash-frontend/src/stylesheets/App.css
+++ b/code-clash-frontend/src/stylesheets/App.css
@@ -11,8 +11,6 @@ body {
 
 button {
   padding: 0.5em;
-  border: none;
-  cursor: pointer;
 }
 
 a {
@@ -44,36 +42,4 @@ input[type=text]:focus, input[type=password]:focus {
   border-color: #08e8e5;
 }
 
-.account-info, .code-record {
-  color: white;
-  background-color: #333130;
-  margin: 0 auto;
-  padding: 1em;
-  box-shadow: 0.5em 0.5em rgba(0, 0, 0, 0.25);
-  margin: 1em;
-  width: 70%;
-}
-
-.code-record {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.code-record .codeBlock {
-  font-size: 10pt;
-  padding: 0.5em;
-  width: 90%;
-  height: 80%;
-  overflow: auto;
-}
-.code-record .title {
-  font-weight: bold;
-}
-.code-record .desc {
-  color: grey;
-}
-.code-record .desc .toggle-code {
-  color: white;
-  cursor: pointer;
-}
-
-/*# sourceMappingURL=accounts.css.map */
+/*# sourceMappingURL=App.css.map */
