--- a/code-clash-frontend/src/subclasses/blocks/blocks.css
+++ b/code-clash-frontend/src/subclasses/blocks/blocks.css
@@ -1,37 +1,36 @@
+.blocks-container {
+  text-align: center;
+}
+
 .block {
-  font-size: 10pt;
-  border-radius: 5px;
+  text-align: left;
   outline: 3px solid black;
-  margin: 0 1%;
-  padding: 3%;
   width: 50vh;
   height: 50vh;
-  overflow: auto; }
-  .block:active {
-    outline: 3px solid grey; }
+  overflow: auto;
+}
+.block:active {
+  outline: 3px solid grey;
+}
 
 .overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
   height: 100vh;
   width: 100vw;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 1000; }
+  z-index: 1000;
+}
 
 .overlayBlock {
-  font-size: 10pt;
-  border-radius: 5px;
-  position: fixed;
+  position: absolute;
   top: 10vh;
-  left: calc(50vw - 38vh);
-  padding: 3%;
+  left: calc(50% - 35vh);
   width: 70vh;
   height: 70vh;
   background: white;
-  overflow: auto; }
+  overflow: auto;
+}
 
-button {
-  border: 0; }
+/*# sourceMappingURL=blocks.css.map */
