--- a/code-clash-frontend/src/subclasses/register/register.scss
+++ b/code-clash-frontend/src/subclasses/register/register.scss
@@ -1,41 +1,14 @@
-#contentWrapper
+.regis-form
 {
-	text-align: center;
-}
+	width: 50%;
 
-#regisForm
-{
-	display: inline-block;
-	border: solid;
-	border-width: 1px;
-	/*border-radius: 5px;*/
-	padding: 3%;
-	width: 30vw;
-}
-
-.inField
-{
-	display: flex;
-	flex-direction: column;
-	
-	*
+	input
 	{
-		flex-grow: 1;
-		margin: 2%;
-		padding: 2%;
+		width: 100%;
 	}
-}
 
-.inFieldName
-{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	
-	*
+	button
 	{
-		flex: auto;
-		margin: 2%;
-		padding: 2%;
+		margin: 0.25em;
 	}
 }
