--- a/code-clash-frontend/src/subclasses/accounts/upload/upload.css
+++ b/code-clash-frontend/src/subclasses/accounts/upload/upload.css
@@ -1,19 +1,3 @@
-.uploadBlock {
-  border: solid;
-  border-width: 1px;
-  padding: 0.5em;
-  margin: 2%;
-  width: 20vw;
-  height: 50vh;
-  overflow: auto;
-  text-align: left; }
 
-.fileItem {
-  display: flex;
-  justify-content: space-between;
-  padding: 1px;
-  cursor: pointer; }
-  .fileItem input {
-    border: 0px; }
-    .fileItem input:hover {
-      background-color: silver; }
+
+/*# sourceMappingURL=upload.css.map */
