--- a/code-clash-frontend/src/subclasses/blocks/codeBlock/codeBlock.css
+++ b/code-clash-frontend/src/subclasses/blocks/codeBlock/codeBlock.css
@@ -1,3 +1,73 @@
+@import url("https://fonts.googleapis.com/css?family=PT+Mono");
+* {
+  box-sizing: border-box;
+}
 
+body {
+  font-family: "PT Mono", monospace;
+  color: #333333;
+  background-color: #ebeff2;
+}
+
+button {
+  padding: 0.5em;
+  border: none;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: #ed8600;
+}
+
+form {
+  color: white;
+  background-color: #333130;
+  margin: 0 auto;
+  padding: 1em;
+  box-shadow: 0.5em 0.5em rgba(0, 0, 0, 0.25);
+}
+
+input[type=text], input[type=password] {
+  color: white;
+  background-color: #494847;
+  border: none;
+  border-left: 2px solid white;
+  padding: 0.5em;
+  margin: 0.25em;
+}
+input[type=text]:invalid, input[type=password]:invalid {
+  box-shadow: none;
+  border-color: #e80857;
+}
+input[type=text]:focus, input[type=password]:focus {
+  border-color: #08e8e5;
+}
+
+.block {
+  color: white;
+  background-color: #333130;
+  margin: 0 auto;
+  padding: 1em;
+  box-shadow: 0.5em 0.5em rgba(0, 0, 0, 0.25);
+  text-align: left;
+  display: inline-block;
+  outline: 3px solid black;
+  width: 50vh;
+  height: 50vh;
+  overflow: auto;
+  margin: 1em;
+  cursor: pointer;
+}
+.block:active {
+  outline: 3px solid grey;
+}
+.block.overlay {
+  position: absolute;
+  top: 10vh;
+  left: calc(50% - 35vh);
+  width: 70vh;
+  height: 70vh;
+}
 
 /*# sourceMappingURL=codeBlock.css.map */
