--- a/code-clash-frontend/src/subclasses/accounts/blockView/blockView.scss
+++ b/code-clash-frontend/src/subclasses/accounts/blockView/blockView.scss
@@ -1,5 +1,5 @@
 @import '../../../stylesheets/colours.scss';
-@import '../../../stylesheets/App.scss';
+@import '../../../stylesheets/utilities.scss';;
 
 .block-view
 {
