--- a/code-clash-frontend/src/stylesheets/App.scss
+++ b/code-clash-frontend/src/stylesheets/App.scss
@@ -1,16 +1,6 @@
 @import './colours.scss';
+@import './utilities.scss';
 @import url('https://fonts.googleapis.com/css?family=PT+Mono');
-
-@mixin form-style()
-{
-	color: white;
-	background-color: $form-background;
-
-	margin: 0 auto;
-	padding: 1em;
-
-	box-shadow: 0.5em 0.5em rgba(0, 0, 0, 0.25);
-}
 
 *
 {
