--- a/code-clash-frontend/src/subclasses/accounts/account.scss
+++ b/code-clash-frontend/src/subclasses/accounts/account.scss
@@ -1,5 +1,5 @@
 @import '../../stylesheets/colours.scss';
-@import '../../stylesheets/App.scss';
+@import '../../stylesheets/utilities.scss';;
 
 .account-info, .code-record
 {
